# hypersonic-effects

./: CITATION.cff  README.md  plot_3d.py  plot_emission_3d.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: test.yml
data/: rf_data.csv
examples/: example_for_mat_file.ipynb  example_for_nc_file.ipynb  rf_data_to_file.py
notebooks/: example_for_mat_file.ipynb  example_for_nc_file.ipynb
package/: __init__.py  calculate_area.py  calculate_rf.py  to_excel.py  visualize.py
routines/: estimate_of_files_in_folder.py  plot_3d.py  rf_data_to_file.py
tests/: test_nc_workflow.py
