[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rf_of_hypersonic_aircraft_emissions"
version = "2.0"
description = "Calculate the radiative forcing of hypersonic aircraft trajectories."

readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy==1.26.4",
    "pandas",
    "xarray",
    "scipy",
    "xlsxwriter",
    "netcdf4==1.6.5",
    "aerocalc3",
    "pytest",
    "build",
    "twine",
    "ruff"
]

[project.urls]
"Homepage" = "https://github.com/johannespletzer/rf-of-hypersonic-aircraft-emissions"
"Repository" = "https://github.com/johannespletzer/rf-of-hypersonic-aircraft-emissions.git"

[tool.setuptools]
package-dir = {"" = "package"}

[tool.setuptools.packages.find]
where = ["package"] 
